Add machine translation

--- a/l10n/po/ja_JP/_guides/amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-lambda.adoc.po
@@ -644,8 +644,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:363
+#, fuzzy
 msgid "A port value of zero will result in a randomly assigned port."
-msgstr ""
+msgstr "ポート値を0にすると、ランダムにポートが割り当てられます。"
 
 #. type: Title ==
 #: upstream/_guides/amazon-lambda.adoc:364
@@ -1083,25 +1084,26 @@ msgstr ""
 #. type: Title ==
 #: upstream/_guides/amazon-lambda.adoc:609
 #, fuzzy, no-wrap
-#| msgid "Deploy to AWS Lambda Java Runtime"
 msgid "Deploy to AWS Lambda using a Container Image"
 msgstr "AWS Lambda Java ランタイムへのデプロイ"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:612
+#, fuzzy
 msgid "AWS Lambda supports creating your lambdas by referencing https://docs.aws.amazon.com/lambda/latest/dg/lambda-images.html[container images] rather than uploading ZIP files. This can have some benefits such as bypassing the size limit of the uploaded ZIP files. You can define lambda functions for both native builds as well as regular JVM builds."
-msgstr ""
+msgstr "AWS Lambdaは、ZIPファイルをアップロードするのではなく、 link:https://docs.aws.amazon.com/lambda/latest/dg/lambda-images.html[コンテナ]イメージを参照してラムダを作成することをサポートしています。これは、アップロードされたZIPファイルのサイズ制限を回避できるなどの利点があります。ネイティブビルドだけでなく、通常のJVMビルドでもラムダ関数を定義することができます。"
 
 #. type: Title ===
 #: upstream/_guides/amazon-lambda.adoc:613
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "JVM container image"
-msgstr ""
+msgstr "JVMコンテナイメージ"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:616
+#, fuzzy
 msgid "For a regular JVM distribution you need to base your image off the official AWS Java base images. Below is an example of a Dockerfile that would create a container image from your Quarkus Lambda project. It assumes that `mvn package` has been executed and binaries are available in the `target/` directory:"
-msgstr ""
+msgstr "通常のJVMディストリビューションの場合、AWSの公式Javaベースイメージをベースにする必要があります。以下は、Quarkus Lambdaプロジェクトからコンテナイメージを作成するためのDockerfileの例です。 `mvn package` が実行され、バイナリが `target/` ディレクトリにあることを想定しています。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda.adoc:620
@@ -1126,14 +1128,15 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/amazon-lambda.adoc:627
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Native executable container image"
-msgstr ""
+msgstr "ネイティブの実行可能なコンテナイメージ"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:630
+#, fuzzy
 msgid "To create a lambda container image that uses the native executable we'll need to do things a little differently. In this case, we won't need to use the `java:11` base image from AWS but instead we'll use a special image that assumes that the runtime environment for the lambda is provided. The example below creates such a container. It assumes that a Maven build has been executed (such as `mvn package -Dnative=true`) and has generated the native binary into the `target/` directory. The binary needs to be named `bootstrap` and be placed in `/var/runtime/`:"
-msgstr ""
+msgstr "ネイティブの実行ファイルを使用するラムダコンテナイメージを作成するには、少し異なる方法を取る必要があります。この場合、AWSの `java:11` ベースイメージを使う必要はなく、代わりにラムダ用の実行環境が提供されていることを前提とした特別なイメージを使います。以下の例では、そのようなコンテナを作成しています。Mavenビルドが実行され（ `mvn package -Dnative=true` など）、ネイティブバイナリが `target/` ディレクトリに生成されたと仮定しています。バイナリは `bootstrap` という名前で `/var/runtime/` に配置する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda.adoc:634
@@ -1151,14 +1154,15 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/amazon-lambda.adoc:641
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Deploying a container image lambda"
-msgstr ""
+msgstr "コンテナイメージのラムダをデプロイする"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:644
+#, fuzzy
 msgid "Below, you can see how the container images created above can be built and deployed to AWS using the `docker` and `aws` command line tools. These instructions work for both native and jvm container images and assume that the `aws` command line tool has been logged in."
-msgstr ""
+msgstr "以下では、上記で作成したコンテナイメージを、 `docker` と `aws` のコマンドラインツールでビルドし、AWS にデプロイする方法をご紹介しています。これらの手順は、ネイティブとjvmの両方のコンテナイメージで動作し、 `aws` コマンドラインツールがログインされていることを前提としています。"
 
 #. type: Title ====
 #: upstream/_guides/amazon-lambda.adoc:645
@@ -1180,9 +1184,9 @@ msgstr ""
 
 #. type: Title ====
 #: upstream/_guides/amazon-lambda.adoc:657
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Create an ECR repository in the users AWS account"
-msgstr ""
+msgstr "ユーザーのAWSアカウントにECRリポジトリを作成する"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda.adoc:662
@@ -1192,9 +1196,9 @@ msgstr ""
 
 #. type: Title ====
 #: upstream/_guides/amazon-lambda.adoc:664
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Tag the image using your ECR registry information"
-msgstr ""
+msgstr "ECRの登録情報を使って、画像にタグを付ける。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda.adoc:669
@@ -1204,9 +1208,9 @@ msgstr ""
 
 #. type: Title ====
 #: upstream/_guides/amazon-lambda.adoc:671
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Log Docker into your ECR registry and push the Docker image to it"
-msgstr ""
+msgstr "DockerをECRレジストリにログオンし、Dockerイメージをプッシュします。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda.adoc:677
@@ -1218,14 +1222,15 @@ msgstr ""
 
 #. type: Title ====
 #: upstream/_guides/amazon-lambda.adoc:679
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Create the AWS lambda function with the AWS CLI tool"
-msgstr ""
+msgstr "AWS CLIツールでAWS lambda関数を作成します。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:682
+#, fuzzy
 msgid "Make sure you reference the image you uploaded previously (assumes that a role exists that can be used to run the lambda). Please note that it is not unlikely that for the JVM lambda function, the default memory limit of `128Mb` will not be enough to run the function. In that case, you can increase the memory limit when creating the function by providing the `--memory-size 256` parameter to your `aws lambda create-function` command. You can also adjust the function in the AWS console after you've created it."
-msgstr ""
+msgstr "以前アップロードした画像を参照していることを確認してください（ラムダを実行するために使用できるロールが存在することが前提です）。なお、JVMのラムダ関数では、デフォルトのメモリ制限（ `128Mb` ）では関数を実行するのに十分でない可能性が少なくないことに注意してください。その場合、 `aws lambda create-function` コマンドに `--memory-size 256` パラメータを与えることで、関数作成時にメモリ制限を増加させることができます。また、関数を作成した後、AWSコンソールで調整することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda.adoc:686
@@ -1235,8 +1240,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:689
+#, fuzzy
 msgid "Now you can use the AWS console to view and test your new lambda function."
-msgstr ""
+msgstr "これで、AWSコンソールを使って新しいラムダ関数を表示し、テストすることができます。"
 
 #. type: Title ==
 #: upstream/_guides/amazon-lambda.adoc:690
