--- a/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
@@ -1172,25 +1172,18 @@ msgstr "Minikube エクステンションが想定している前提がワーク
 #. type: Title ===
 #: upstream/_guides/deploying-to-kubernetes.adoc:664
 #, fuzzy, no-wrap
-#| msgid "Deploying to Minikube"
 msgid "Deploying to Kind"
 msgstr "Minikube へのデプロイ"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:667
 #, fuzzy
-#| msgid "https://github.com/kubernetes/minikube[Minikube] is quite popular when a Kubernetes cluster is needed for development purposes. To make the deployment to Minikube experience as frictionless as possible, Quarkus provides the `quarkus-minikube` extension. This extension can be added to a project like so:"
 msgid "https://kind.sigs.k8s.io/[Kind] is an other popular tool used as a Kubernetes cluster for development purposes. To make the deployment to Kind experience as frictionless as possible, Quarkus provides the `quarkus-kind` extension. This extension can be added to a project like so:"
 msgstr "https://github.com/kubernetes/minikube[Minikube] は、開発目的でKubernetesクラスタが必要な場合に非常に人気があります。Minikubeへのデプロイをできるだけ摩擦のないものにするために、Quarkusは `quarkus-minikube` エクステンションを提供しています。このエクステンションは、以下のようなプロジェクトに追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-kubernetes.adoc:674
 #, fuzzy, no-wrap
-#| msgid ""
-#| "<dependency>\n"
-#| "    <groupId>io.quarkus</groupId>\n"
-#| "    <artifactId>quarkus-smallrye-health</artifactId>\n"
-#| "</dependency>\n"
 msgid ""
 "<dependency>\n"
 "    <groupId>io.quarkus</groupId>\n"
@@ -1204,8 +1197,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:678
+#, fuzzy
 msgid "The purpose of this extension is to generate Kubernetes manifests (`kind.yaml` and `kind.json`) that are tailored to Kind and also to automate the process of loading images to the cluster when performing container image builds. The tailor made manifests will be pretty similar (they share the same rules) with Minikube (see above)."
-msgstr ""
+msgstr "この拡張機能の目的は、Kindに合わせたKubernetesマニフェスト( `kind.yaml` と `kind.json`)を生成することと、コンテナイメージのビルドを行う際にクラスタにイメージをロードする処理を自動化することにあります。テーラーメイドのマニフェストは、Minikube（上記参照）とかなり似ている（同じルールを共有している）でしょう。"
 
 #. type: Title ==
 #: upstream/_guides/deploying-to-kubernetes.adoc:679
@@ -1949,7 +1943,6 @@ msgstr "quarkus.kubernetes.resources.limits.memory"
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:731
 #, fuzzy, no-wrap
-#| msgid "quarkus.kubernetes.service-account"
 msgid "quarkus.kubernetes.security-context"
 msgstr "quarkus.kubernetes.service-account"
 
@@ -1958,67 +1951,62 @@ msgstr "quarkus.kubernetes.service-account"
 #: upstream/_guides/deploying-to-kubernetes.adoc:820
 #: upstream/_guides/deploying-to-kubernetes.adoc:1052
 #: upstream/_guides/deploying-to-kubernetes.adoc:1160
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "SecurityContext"
-msgstr ""
+msgstr "セキュリティコンテキスト"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:732
 #: upstream/_guides/deploying-to-kubernetes.adoc:1053
 #: upstream/_guides/deploying-to-kubernetes.adoc:1161
 #, fuzzy, no-wrap
-#| msgid "( see Probe )"
 msgid "( see SecurityContext )"
 msgstr "( Probeを参照 )"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:732
 #, fuzzy, no-wrap
-#| msgid "quarkus.kubernetes.mounts"
 msgid "quarkus.kubernetes.remote-debug.enabled"
 msgstr "quarkus.kubernetes.mounts"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:733
 #, fuzzy, no-wrap
-#| msgid "quarkus.kubernetes.mounts"
 msgid "quarkus.kubernetes.remote-debug.transport"
 msgstr "quarkus.kubernetes.mounts"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:734
 #: upstream/_guides/deploying-to-kubernetes.adoc:1055
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "dt_socket"
-msgstr ""
+msgstr "dt_socket"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:734
 #, fuzzy, no-wrap
-#| msgid "quarkus.kubernetes.readiness-probe"
 msgid "quarkus.kubernetes.remote-debug.address-port"
 msgstr "quarkus.kubernetes.readiness-probe"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:735
 #: upstream/_guides/deploying-to-kubernetes.adoc:1056
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "5005"
-msgstr ""
+msgstr "5005"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:735
 #, fuzzy, no-wrap
-#| msgid "quarkus.kubernetes.readiness-probe"
 msgid "quarkus.kubernetes.remote-debug.suspend"
 msgstr "quarkus.kubernetes.readiness-probe"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:736
 #: upstream/_guides/deploying-to-kubernetes.adoc:1057
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "n"
-msgstr ""
+msgstr "n"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:740
@@ -2317,35 +2305,35 @@ msgstr "ホスト名のリスト"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:823
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "se-linux-options"
-msgstr ""
+msgstr "se-linux オプション"
 
 #. type: Block title
 #: upstream/_guides/deploying-to-kubernetes.adoc:823
 #: upstream/_guides/deploying-to-kubernetes.adoc:834
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "SeLinuxOptions"
-msgstr ""
+msgstr "SeLinuxオプション"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:824
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "windows-options"
-msgstr ""
+msgstr "ウィンドウズオプション"
 
 #. type: Block title
 #: upstream/_guides/deploying-to-kubernetes.adoc:824
 #: upstream/_guides/deploying-to-kubernetes.adoc:843
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "WindowsOptions"
-msgstr ""
+msgstr "ウィンドウズオプション"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:825
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "run-as-user"
-msgstr ""
+msgstr "ランアスユーザ"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:825
@@ -2357,93 +2345,91 @@ msgstr "long"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:826
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "run-as-group"
-msgstr ""
+msgstr "ランアズグループ"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:827
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "run-as-non-root"
-msgstr ""
+msgstr "ランアスノンルート"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:828
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "supplemental-groups"
-msgstr ""
+msgstr "ほじょしゅうだん"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:828
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "long[]"
-msgstr ""
+msgstr "long[]"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:829
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "fs-group"
-msgstr ""
+msgstr "エフエスグループ"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:830
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "sysctls"
-msgstr ""
+msgstr "システムズクタルズ"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:831
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "fs-group-change-policy"
-msgstr ""
+msgstr "エフエスグループチェンジポリシー"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:837
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "level"
-msgstr ""
+msgstr "レベル"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:838
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "role"
-msgstr ""
+msgstr "役割"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:839
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "user"
-msgstr ""
+msgstr "ユーザー"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:840
 #, fuzzy, no-wrap
-#| msgid "fs-type"
 msgid "type"
 msgstr "fs-type"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:846
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "gmsa-credential-spec-name"
-msgstr ""
+msgstr "gmsa-credential-spec-name（グラムサ・クレデンシャル・スペック・ネーム"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:847
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "gmsa-credential-spec"
-msgstr ""
+msgstr "gmsa-credential-spec（グラムサクレデンシャルスペック"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:848
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "run-as-user-name"
-msgstr ""
+msgstr "実行時利用者名"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:849
 #, fuzzy, no-wrap
-#| msgid "host-port"
 msgid "host-process"
 msgstr "host-port"
 
@@ -2894,34 +2880,32 @@ msgstr "quarkus.openshift.arguments"
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1029
 #, fuzzy, no-wrap
-#| msgid "quarkus.openshift.arguments"
 msgid "quarkus.openshift.jvm-arguments"
 msgstr "quarkus.openshift.arguments"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1029
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The JVM arguments to pass to the JVM when starting the application"
-msgstr ""
-
-#. type: Table
-#: upstream/_guides/deploying-to-kubernetes.adoc:1030
-#, no-wrap
-msgid "-Dquarkus.http.host=0.0.0.0,-Djava.util.logging.manager=org.jboss.logmanager.LogManager"
-msgstr ""
+msgstr "アプリケーションの起動時にJVMに渡すJVM引数"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1030
 #, fuzzy, no-wrap
-#| msgid "quarkus.openshift.arguments"
+msgid "-Dquarkus.http.host=0.0.0.0,-Djava.util.logging.manager=org.jboss.logmanager.LogManager"
+msgstr "-Dquarkus.http.host=0.0.0.0,-Djava.util.logging.manager=org.jboss.logmanager.LogManager"
+
+#. type: Table
+#: upstream/_guides/deploying-to-kubernetes.adoc:1030
+#, fuzzy, no-wrap
 msgid "quarkus.openshift.jvm-additional-arguments"
 msgstr "quarkus.openshift.arguments"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1030
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Additional JVM arguments to pass to the JVM when starting the application"
-msgstr ""
+msgstr "アプリケーションの起動時にJVMに渡す追加のJVM引数"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1031
@@ -3052,35 +3036,30 @@ msgstr "quarkus.openshift.headless"
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1052
 #, fuzzy, no-wrap
-#| msgid "quarkus.openshift.service-account"
 msgid "quarkus.openshift.security-context"
 msgstr "quarkus.openshift.service-account"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1053
 #, fuzzy, no-wrap
-#| msgid "quarkus.openshift.route.expose"
 msgid "quarkus.openshift.remote-debug.enabled"
 msgstr "quarkus.openshift.route.expose"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1054
 #, fuzzy, no-wrap
-#| msgid "quarkus.openshift.route.host"
 msgid "quarkus.openshift.remote-debug.transport"
 msgstr "quarkus.openshift.route.host"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1055
 #, fuzzy, no-wrap
-#| msgid "quarkus.openshift.readiness-probe"
 msgid "quarkus.openshift.remote-debug.address-port"
 msgstr "quarkus.openshift.readiness-probe"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1056
 #, fuzzy, no-wrap
-#| msgid "quarkus.openshift.route.expose"
 msgid "quarkus.openshift.remote-debug.suspend"
 msgstr "quarkus.openshift.route.expose"
 
@@ -3457,7 +3436,6 @@ msgstr "( GlobalAutoScalingConfig を参照 )"
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1160
 #, fuzzy, no-wrap
-#| msgid "quarkus.knative.service-account"
 msgid "quarkus.knative.security-context"
 msgstr "quarkus.knative.service-account"
 
@@ -3800,19 +3778,21 @@ msgstr "現在のところ、さらなるカスタマイズのための追加オ
 
 #. type: Title ===
 #: upstream/_guides/deploying-to-kubernetes.adoc:1278
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Remote Debugging"
-msgstr ""
+msgstr "リモートデバッグ"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1281
+#, fuzzy
 msgid "To remotely debug applications that are running on a kubernetes environment, we need to deploy the application as described in the previous section and add as new property: `quarkus.kubernetes.remote-debug.enabled=true`. This property will automatically configure the Java application to append the java agent configuration (for example: `-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005`) and also the service resource to listen using the java agent port."
-msgstr ""
+msgstr "kubernetes環境で動作しているアプリケーションをリモートでデバッグするには、前のセクションで説明したようにアプリケーションをデプロイし、新しいプロパティとして `quarkus.kubernetes.remote-debug.enabled=true` を追加する必要があります。このプロパティは、Javaアプリケーションにjavaエージェントの設定（例： `-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005` ）を追加し、javaエージェントポートを使用してリッスンするサービスリソースも自動的に設定します。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1283
+#, fuzzy
 msgid "After your application has been deployed with the debug enabled, next you need to tunnel the traffic from your local host machine to the specified port of the java agent:"
-msgstr ""
+msgstr "デバッグを有効にした状態でアプリケーションをデプロイしたら、次に、ローカルホストマシンからjavaエージェントの指定されたポートにトラフィックをトンネルする必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-kubernetes.adoc:1287
@@ -3822,13 +3802,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1290
+#, fuzzy
 msgid "Using this command, you'll forward the traffic from the \"localhost:5005\" to the kubernetes service running the java agent using the port \"5005\" which is the one that the java agent uses by default for remote debugging. You can also configure another java agent port using the property `quarkus.kubernetes.remote-debug.address-port`."
-msgstr ""
+msgstr "このコマンドを使用すると、javaエージェントがリモートデバッグ用にデフォルトで使用するポート「5005」を使用して、「localhost:5005」からのトラフィックをjavaエージェントを実行しているkubernetesサービスへ転送することになります。また、プロパティ `quarkus.kubernetes.remote-debug.address-port` を使用して、別のjavaエージェントポートを設定することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1292
+#, fuzzy
 msgid "Finally, all you need to do is to configure your favorite IDE to attach the java agent process that is forwarded to `localhost:5005` and start to debug your application. For example, in IntelliJ IDEA, you can follow https://www.jetbrains.com/help/idea/tutorial-remote-debug.html:[this tutorial] to debug remote applications."
-msgstr ""
+msgstr "最後に、 `localhost:5005` に転送された java agent プロセスをアタッチするように、お気に入りの IDE を設定し、アプリケーションのデバッグを開始するだけです。例えば、IntelliJ IDEAでは、 link:https://www.jetbrains.com/help/idea/tutorial-remote-debug.html:[このチュートリアルに従って]、リモートアプリケーションをデバッグすることができます。"
 
 #. type: Title ==
 #: upstream/_guides/deploying-to-kubernetes.adoc:1293
