--- a/l10n/po/ja_JP/_guides/gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/gcp-functions-http.adoc.po
@@ -137,8 +137,9 @@ msgstr "各タイプのエンドポイントが不要な場合は、対応する
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions-http.adoc:69
+#, fuzzy
 msgid "Quarkus supports Cloud Functions gen 1 and gen 2. For an overview of Cloud Functions gen 2 see https://cloud.google.com/functions/docs/2nd-gen/overview[this page] on the Google Cloud Functions documentation. To use gen 2 you must use `gcloud beta` command and add the `--gen2` parameter."
-msgstr ""
+msgstr "Quarkusは、Cloud Functionsの第1世代と第2世代をサポートしています。Cloud Functions gen 2の概要については、Google Cloud Functionsのドキュメントの link:https://cloud.google.com/functions/docs/2nd-gen/overview[このページを]参照してください。gen 2を使用するには、 `gcloud beta` コマンドを使用し、 `--gen2` パラメータを追加する必要があります。"
 
 #. type: Title ===
 #: upstream/_guides/gcp-functions-http.adoc:70
@@ -171,13 +172,6 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/gcp-functions-http.adoc:88
 #, fuzzy, no-wrap
-#| msgid ""
-#| "    @GET\n"
-#| "    @Produces(MediaType.TEXT_PLAIN)\n"
-#| "    public String hello() {\n"
-#| "        return \"hello\";\n"
-#| "    }\n"
-#| "}\n"
 msgid ""
 "    @GET\n"
 "    @Produces(MediaType.TEXT_PLAIN)\n"
