--- a/l10n/po/ja_JP/_guides/gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_guides/gcp-functions.adoc.po
@@ -115,14 +115,14 @@ msgstr "Cloud Functions の関数を作成する"
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:59
 #, fuzzy
-#| msgid "For this example project, we will create three functions, one `HttpFunction`, one `BackgroundFunction` (Storage event) and one `RawBackgroundFunction` (PubSub event)."
 msgid "For this example project, we will create four functions, one `HttpFunction`, one `BackgroundFunction` (Storage event), one `RawBackgroundFunction` (PubSub event) and one `CloudEventsFunction` (storage event using the Cloud Events specification)."
 msgstr "このプロジェクトの例では、 `HttpFunction` 、 `BackgroundFunction` (ストレージイベント)、 `RawBackgroundFunction` (PubSubイベント)の3つの関数を作成します。"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:61
+#, fuzzy
 msgid "Quarkus supports Cloud Functions gen 1 and gen 2. For an overview of Cloud Functions gen 2 see https://cloud.google.com/functions/docs/2nd-gen/overview[this page] on the Google Cloud Functions documentation. To use gen 2 you must use `gcloud beta` command and add the `--gen2` parameter."
-msgstr ""
+msgstr "Quarkusは、Cloud Functionsの第1世代と第2世代をサポートしています。Cloud Functions gen 2の概要については、Google Cloud Functionsのドキュメントの link:https://cloud.google.com/functions/docs/2nd-gen/overview[このページを]参照してください。gen 2を使用するには、 `gcloud beta` コマンドを使用し、 `--gen2` パラメータを追加する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/gcp-functions.adoc:62
@@ -133,7 +133,6 @@ msgstr "Cloud Functions の関数を選択する"
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:67
 #, fuzzy
-#| msgid "The `quarkus-google-cloud-functions` extension scans your project for a class that directly implements the Google Cloud `HttpFunction`, `BackgroundFunction` or `RawBackgroundFunction` interface.  It must find a class in your project that implements one of these interfaces or it will throw a build time failure.  If it finds more than one function classes, a build time exception will also be thrown."
 msgid "The `quarkus-google-cloud-functions` extension scans your project for a class that directly implements the Google Cloud `HttpFunction`, `BackgroundFunction`, `RawBackgroundFunction` or `CloudEventsFunction` interface.  It must find a class in your project that implements one of these interfaces or it will throw a build time failure.  If it finds more than one function classes, a build time exception will also be thrown."
 msgstr "`quarkus-google-cloud-functions` エクステンションは、プロジェクト内からGoogle Cloud `HttpFunction` 、 `BackgroundFunction` 、または `RawBackgroundFunction` インターフェイスを直接実装しているクラスをプロジェクト内でスキャンします。これらのインターフェイスを実装しているクラスがプロジェクト内で見つからない場合やインターフェイスを実装しているクラスが複数見つかった場合は、ビルド時に例外がスローされます。"
 
@@ -380,20 +379,19 @@ msgstr "Google Cloud Functionで実行するためには、実行する対象の
 #: upstream/_guides/gcp-functions.adoc:333
 #: upstream/_guides/gcp-functions.adoc:430
 #, fuzzy, no-wrap
-#| msgid "The HttpFunction"
 msgid "The CloudEventsFunction"
 msgstr "HttpFunction"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:200
 #: upstream/_guides/gcp-functions.adoc:336
+#, fuzzy
 msgid "`CloudEventsFunction` is a feature of Cloud Functions gen 2 only."
-msgstr ""
+msgstr "`CloudEventsFunction` は、Cloud Functions gen 2のみの機能です。"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:202
 #, fuzzy
-#| msgid "This `BackgroundFunction` is triggered by a Storage event, you can use any events supported by Google Cloud instead."
 msgid "This `CloudEventsFunction` is triggered by a Cloud Events Storage event, you can use any Cloud Events supported by Google Cloud instead."
 msgstr "この `BackgroundFunction` はストレージイベントによってトリガーされる以外にも、Google Cloud でサポートされているトリガーイベントを使用できます。"
 
@@ -449,21 +447,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:233
 #, fuzzy
-#| msgid "This is a regular Google Cloud Function implementation, so it needs to implement `com.google.cloud.functions.HttpFunction`."
 msgid "This is a regular Google Cloud Function implementation, so it needs to implement `com.google.cloud.functions.CloudEventsFunction`."
 msgstr "Google Cloud Functionで実行するためには、実行する対象のクラスは`com.google.cloud.functions.HttpFunction`インターフェースをImplementsする必要があります ."
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:235
 #, fuzzy
-#| msgid "This is standard Google Cloud Function implementation, nothing fancy here."
 msgid "This is standard Google Cloud Function implementation, nothing fancy here except that it receives a `io.cloudevents.CloudEvent`."
 msgstr "これは標準的な Google Cloud Function の実装であり、ここでは何も派手なことはしていません。"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:236
 #, fuzzy
-#| msgid "This is the class the event will be deserialized to."
 msgid "This is the storage event inside the Cloud Events."
 msgstr "これはトリガーのイベントデータがデシリアライズされるクラスです。"
 
@@ -605,7 +600,6 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:339
 #, fuzzy
-#| msgid "This is an example command to deploy your `BackgroundFunction` to Google Cloud, as the function is triggered by a Storage event, it needs to use `--trigger-event google.storage.object.finalize` and the `--trigger-resource` parameter with the name of a previously created bucket:"
 msgid "This is an example command to deploy your `CloudEventsFunction` to Google Cloud, as the function is triggered by a Storage event, it needs to use `--trigger-bucket` parameter with the name of a previously created bucket:"
 msgstr "これは `BackgroundFunction` を Google Cloud にデプロイするためのコマンドの例です。この関数は Storage イベントによってトリガーされるため、 `--trigger-event google.storage.object.finalize` と `--trigger-resource` パラメーターに先の手順で作成したバケットの名前を指定する必要があります。"
 
@@ -621,14 +615,12 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_guides/gcp-functions.adoc:350
 #, fuzzy
-#| msgid "The entry point must always be set to `io.quarkus.gcp.functions.QuarkusHttpFunction` as this is the class that integrates Cloud Functions with Quarkus."
 msgid "The entry point must always be set to `io.quarkus.gcp.functions.QuarkusCloudEventsFunction` as this is the class that integrates Cloud Functions with Quarkus."
 msgstr "エントリーポイントは常に `io.quarkus.gcp.functions.QuarkusHttpFunction` に設定する必要があります。このクラスはQuarkusとCloud Functionsを統合するクラスです。"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:353
 #, fuzzy
-#| msgid "To trigger the event, you can send a file to the GCS `quarkus-hello` bucket or you can use gcloud to simulate one:"
 msgid "To trigger the event, you can send a file to the GCS `example-cloud-event` bucket."
 msgstr "イベントをトリガーするには、GCS `quarkus-hello` バケットにファイルを送るか、gcloudコマンドを使ってシミュレーションすることができます。"
 
@@ -736,13 +728,13 @@ msgstr "このコマンドは、PubSubのBackgroundFunctionを次のPubSubMessag
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:433
+#, fuzzy
 msgid "`CloudEventsFunction` is a feature of Cloud Function gen 2 only."
-msgstr ""
+msgstr "`CloudEventsFunction` は、Cloud Function gen 2のみの機能です。"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:435
 #, fuzzy
-#| msgid "For background functions, you launch the invoker with a target class of `io.quarkus.gcp.functions.BackgroundFunction`."
 msgid "For cloud events functions, you launch the invoker with a target class of `io.quarkus.gcp.functions.QuarkusCloudEventsFunction`."
 msgstr "BackgroundFunction関数の場合は、 `io.quarkus.gcp.functions.BackgroundFunction` のターゲットクラスでinvokerを起動します。"
 
@@ -758,7 +750,6 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:446
 #, fuzzy
-#| msgid "Then you can call your background function via an HTTP call with a payload containing the event:"
 msgid "Then you can call your cloud events function via an HTTP call with a payload containing the event:"
 msgstr "起動後、HTTP 呼び出しにイベントを含むペイロードを付与することでバックグラウンド関数を呼び出すことができます。"
 
@@ -793,7 +784,6 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:473
 #, fuzzy
-#| msgid "This will call your Storage background function with an event `{\"name\":\"hello.txt\"}`, so an event on the `hello.txt` file."
 msgid "This will call your cloud events function with an event on the `\"MY_FILE.txt` file."
 msgstr "このコマンドにより、イベント `{\"name\":\"hello.txt\"}` でBackgroundFunctionを呼び出します。これは、`hello.txt`をCloud Storageに保存した際のイベントをテストするのと同じです。"
 
