--- a/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -118,7 +118,6 @@ msgstr "Hibernate Search + Elasticsearch,"
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:55
 #, fuzzy
-#| msgid "RESTEasy and Jackson."
 msgid "RESTEasy Reactive and Jackson."
 msgstr "RESTEasy と Jackson."
 
@@ -536,7 +535,6 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:277
 #, fuzzy
-#| msgid "Nothing out of the ordinary here: it is just good old Hibernate ORM with Panache operations in a standard JAX-RS service."
 msgid "Nothing out of the ordinary here: it is just good old Hibernate ORM with Panache operations in a REST service."
 msgstr "ここでは何も特別なことはありません。標準的なJAX-RSサービスでPanache操作を行う古き良きHibernate ORMです。"
 
@@ -1164,8 +1162,9 @@ msgstr "これは、エンティティが検索可能になるのを待ってか
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:578
+#, fuzzy
 msgid "For development and tests, we rely on <<dev-services,Dev Services>>, which means Quarkus will start a PostgreSQL database and Elasticsearch cluster automatically.  In production mode, however, you will want to start a PostgreSQL database and Elasticsearch cluster manually, which is why we provide Quarkus with this connection info in the `prod` profile (`%prod.` prefix)."
-msgstr ""
+msgstr "開発およびテストでは、 link:#dev-services[Dev Servicesに]依存します。これは、QuarkusがPostgreSQLデータベースとElasticsearchクラスタを自動的に開始することを意味します。しかし、本番モードでは、PostgreSQLデータベースとElasticsearchクラスターを手動で起動する必要があります。そのため、Quarkusには、この接続情報を `prod` プロファイル（ `%prod.` プレフィックス）で提供しています。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:581
@@ -1181,23 +1180,27 @@ msgstr "開発サービス（コンフィグレーション・フリー・デー
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:588
+#, fuzzy
 msgid "Quarkus supports a feature called Dev Services that allows you to start various containers without any config.  In the case of Elasticsearch this support extends to the default Elasticsearch connection.  What that means practically, is that if you have not configured `quarkus.hibernate-search-orm.elasticsearch.hosts` Quarkus will automatically start an Elasticsearch container when running tests or in xref:dev-mode-differences.adoc[dev mode], and automatically configure the connection."
-msgstr ""
+msgstr "Quarkusは、Dev Servicesという機能をサポートしており、設定なしでさまざまなコンテナを起動することができます。Elasticsearchの場合、このサポートはデフォルトのElasticsearch接続にも及んでいます。つまり、 `quarkus.hibernate-search-orm.elasticsearch.hosts` を設定していない場合、テスト実行時や link:dev-mode-differences.html[開発モード]時にQuarkusが自動的にElasticsearchコンテナを起動し、接続を自動的に設定するということです。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:592
+#, fuzzy
 msgid "When running the production version of the application, the Elasticsearch connection needs to be configured as normal, so if you want to include a production database config in your `application.properties` and continue to use Dev Services we recommend that you use the `%prod.` profile to define your Elasticsearch settings."
-msgstr ""
+msgstr "製品版アプリケーションを実行する場合、Elasticsearch接続は通常通り設定する必要があります。 `application.properties` に製品版データベース設定を含め、Dev Servicesを引き続き使用したい場合は、 `%prod.` プロファイルを使用してElasticsearch設定を定義することをお勧めします。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:594
+#, fuzzy
 msgid "Dev Services for Elasticsearch is currently unable to start multiple clusters concurrently, so it only works with the default backend of the default persistence unit: named persistence units or named backends won't be able to take advantage of Dev Services for Elasticsearch."
-msgstr ""
+msgstr "Dev Services for Elasticsearchは現在、複数のクラスタを同時に起動することができないため、デフォルトの永続化ユニットのデフォルトのバックエンドでのみ動作します：名前付き永続化ユニットや名前付きバックエンドはDev Services for Elasticsearchを利用することができません。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:596
+#, fuzzy
 msgid "For more information you can read the xref:elasticsearch-dev-services.adoc[Dev Services for Elasticsearch guide]."
-msgstr ""
+msgstr "詳細については、 link:elasticsearch-dev-services.html[Dev Services for Elasticsearchガイドを]ご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:597
