--- a/l10n/po/ja_JP/_guides/kafka-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-dev-services.adoc.po
@@ -116,25 +116,27 @@ msgstr "イメージの設定"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:52
+#, fuzzy
 msgid "Dev Services for Kafka supports https://redpanda.com[Redpanda] and https://strimzi.io[Strimzi] (in https://github.com/apache/kafka/blob/trunk/config/kraft/README.md[Kraft] mode)."
-msgstr ""
+msgstr "Dev Services for Kafkaは、 link:https://redpanda.com[Redpandaと]  link:https://strimzi.io[Strimzi]（ link:https://github.com/apache/kafka/blob/trunk/config/kraft/README.md[Kraft]モード）をサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:56
 #, fuzzy
-#| msgid "Dev Services for Kafka uses: `vectorized/redpanda` images.  You can select any version from https://hub.docker.com/r/vectorized/redpanda:"
 msgid "Redpanda is a Kafka compatible event streaming platform.  Because it provides a faster startup time dev services defaults to `vectorized/redpanda` images.  You can select any version from https://hub.docker.com/r/vectorized/redpanda."
 msgstr "デフォルトでは、Kafka向けDev Servicesは、 `vectorized/redpanda:latest` を使用します。 https://hub.docker.com/r/vectorized/redpanda から任意のバージョンを選択することができます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:60
+#, fuzzy
 msgid "Strimzi provides container images and Operators for running Apache Kafka on Kubernetes.  While Strimzi is optimized for Kubernetes, the images work perfectly in classic container environments.  Strimzi container images run \"genuine\" Kafka broker on JVM, which is slower to start."
-msgstr ""
+msgstr "Strimziは、Kubernetes上でApache Kafkaを動作させるためのコンテナイメージとOperatorを提供します。StrimziはKubernetesに最適化されていますが、イメージは従来のコンテナ環境でも完全に動作します。Strimziのコンテナイメージは、JVM上で \"本物の \"Kafkaブローカーを動作させますが、起動が遅くなっています。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:62
+#, fuzzy
 msgid "For Strimzi, you can select any image with a Kafka version which has Kraft support (2.8.1 and higher) from https://quay.io/repository/strimzi-test-container/test-container?tab=tags"
-msgstr ""
+msgstr "Strimzi では、Kafka のバージョンが Kraft に対応しているもの（2.8.1 以上）であれば、 https://quay.io/repository/strimzi-test-container/test-container?tab=tags から任意の画像を選択することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka-dev-services.adoc:66
