--- a/l10n/po/ja_JP/_guides/native-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/native-reference.adoc.po
@@ -785,8 +785,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:464
+#, fuzzy
 msgid "For further information, check out this link:https://quarkus.io/blog/quarkus-native-neo4j-call-tree[blog post] that explores the Quarkus Hibernate ORM quickstart using the techniques explained above."
-msgstr ""
+msgstr "詳細は、上記で説明したテクニックを使用してQuarkus Hibernate ORMのクイックスタートを探求した、この link:https://quarkus.io/blog/quarkus-native-neo4j-call-tree[ブログ記事を]ご覧ください。"
 
 #. type: Title ===
 #: upstream/_guides/native-reference.adoc:465
