--- a/l10n/po/ja_JP/_guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_guides/quartz.adoc.po
@@ -478,13 +478,15 @@ msgstr "データベースストアを使用してジョブ関連情報を永続
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:228
+#, fuzzy
 msgid "The misfire policy can be configured for each job. `task-job` is the identity of the job."
-msgstr ""
+msgstr "誤爆ポリシーは、ジョブごとに設定できます。 `task-job` はジョブの ID です。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:231
+#, fuzzy
 msgid "Valid misfire policy for cron jobs are: `smart-policy`, `ignore-misfire-policy`, `fire-now` and `cron-trigger-do-nothing`.  Valid misfire policy for interval jobs are: `smart-policy`, `ignore-misfire-policy`, `fire-now`, `simple-trigger-reschedule-now-with-existing-repeat-count`, `simple-trigger-reschedule-now-with-remaining-repeat-count`, `simple-trigger-reschedule-next-with-existing-count` and `simple-trigger-reschedule-next-with-remaining-count`."
-msgstr ""
+msgstr "cronジョブの有効な誤動作防止ポリシーは以下の通りです。 `smart-policy`, `ignore-misfire-policy`, `fire-now` および `cron-trigger-do-nothing` 。インターバルジョブの有効なミスファイアポリシーは次のとおりです。 `smart-policy` `ignore-misfire-policy`, `fire-now`, `simple-trigger-reschedule-now-with-existing-repeat-count`, `simple-trigger-reschedule-now-with-remaining-repeat-count`, `simple-trigger-reschedule-next-with-existing-count` および `simple-trigger-reschedule-next-with-remaining-count` 。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:232
