--- a/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
@@ -231,8 +231,9 @@ msgstr "Mutiny"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:105
+#, fuzzy
 msgid "RESTEasy Reactive includes supports for Mutiny types (e.g. `Uni` and `Multi`) out of the box."
-msgstr ""
+msgstr "RESTEasy Reactiveは、Mutinyタイプ（例えば、 `Uni` と `Multi` ）に最初から対応しています。"
 
 #. type: delimited block =
 #: upstream/_guides/reactive-sql-clients.adoc:110
@@ -249,7 +250,6 @@ msgstr "JSON バインディング"
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:116
 #, fuzzy
-#| msgid "We will expose `Fruit` instances over HTTP in the JSON format.  Consequently, you also need to add the `quarkus-resteasy-jackson` extension:"
 msgid "We will expose `Fruit` instances over HTTP in the JSON format.  Consequently, you also need to add the `quarkus-resteasy-reactive-jackson` extension:"
 msgstr "JSON 形式で HTTP 経由で `Fruit` インスタンスを公開します。そのため、 `quarkus-resteasy-jackson` のエクステンションも追加する必要があります。"
 
