--- a/l10n/po/ja_JP/_guides/rest-client-multipart.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-multipart.adoc.po
@@ -27,13 +27,15 @@ msgstr "マルチパートでのRESTクライアントの使用"
 
 #. type: delimited block =
 #: upstream/_guides/rest-client-multipart.adoc:13
+#, fuzzy
 msgid "This guide is about the multipart support of the REST Client compatible with https://resteasy.dev[RESTEasy Classic] which used to be the default JAX-RS implementation until Quarkus 2.8."
-msgstr ""
+msgstr "このガイドは、Quarkus 2.8までデフォルトのJAX-RS実装であった link:https://resteasy.dev[RESTEasy Classicと]互換性のあるREST Clientのマルチパート対応について説明します。"
 
 #. type: delimited block =
 #: upstream/_guides/rest-client-multipart.adoc:17
+#, fuzzy
 msgid "It is now recommended to use RESTEasy Reactive, which supports equally well traditional blocking workloads and reactive workloads.  For more information about RESTEasy Reactive, please see the xref:rest-client-reactive.adoc[REST Client Reactive guide] and, for the server side, the xref:rest-json.adoc[introductory REST JSON guide] or the more detailed xref:resteasy-reactive.adoc[RESTEasy Reactive guide]."
-msgstr ""
+msgstr "現在では、従来のブロック型ワークロードとリアクティブ型ワークロードを同様にサポートするRESTEasy Reactiveの使用が推奨されています。RESTEasy Reactiveの詳細については、 link:rest-client-reactive.html[REST Client Reactiveガイド]、サーバーサイドについては、 link:rest-json.html[REST JSON入門ガイド]、または link:resteasy-reactive.html[RESTEasy Reactive]詳細 link:resteasy-reactive.html[ガイドを]参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-multipart.adoc:20
