--- a/l10n/po/ja_JP/_guides/security-customization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-customization.adoc.po
@@ -166,34 +166,39 @@ msgstr "}\n"
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:73
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Dealing with more than one HttpAuthenticationMechanism"
-msgstr ""
+msgstr "複数のHttpAuthenticationMechanismを処理する"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:76
+#, fuzzy
 msgid "More than one `HttpAuthenticationMechanism` can be combined, for example, the built-in `Basic` or `JWT` mechanism provided by `quarkus-smallrye-jwt` has to be used to verify the service clients credentials passed as the HTTP `Authorization` `Basic` or `Bearer` scheme values while the `Authorization Code` mechanism provided by `quarkus-oidc` has to be used to authenticate the users with `Keycloak` or other `OpenId Connect` providers."
-msgstr ""
+msgstr "例えば、HTTP `Authorization` `Basic` または `Bearer` スキーム値として渡されたサービスクライアントの資格情報を検証するために、 `quarkus-smallrye-jwt` によって提供される組み込みの `Basic` または `JWT` 機構を使用しなければならない一方で、 `quarkus-oidc` によって提供される `Authorization Code` 機構は `Keycloak` または他の `OpenId Connect` プロバイダとユーザを認証するために使用しなければならない、 複数の `HttpAuthenticationMechanism` が組み合わせられることができる。"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:78
+#, fuzzy
 msgid "In such cases the mechanisms are asked to verify the credentials in turn until a `SecurityIdentity` is created. The mechanisms are sorted in the descending order using their priority. `Basic` authentication mechanism has the highest priority of `2000`, followed by the `Authorization Code` one with the priority of `1001`, with all other mechanisms provided by Quarkus having the priority of `1000`."
-msgstr ""
+msgstr "このような場合、 `SecurityIdentity` が作成されるまで、メカニズムが順番にクレデンシャルを確認するように要求されます。認証メカニズムは、優先順位の降順でソートされています。 `Basic` 認証メカニズムの優先順位は最高で `2000` 、次いで `Authorization Code` の優先順位は `1001` 、Quarkus が提供する他のすべてのメカニズムの優先順位は `1000` となっています。"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:80
+#, fuzzy
 msgid "If no credentials are provided then the mechanism specific challenge is created, for example, `401` status is returned by either `Basic` or `JWT` mechanisms, URL redirecting the user to the `OpenId Connect` provider is returned by `quarkus-oidc`, etc."
-msgstr ""
+msgstr "認証情報が提供されない場合、メカニズム固有のチャレンジが作成される。例えば、 `401` ステータスは `Basic` または `JWT` のいずれかのメカニズムによって返され、ユーザーを `OpenId Connect` プロバイダにリダイレクトする URL は `quarkus-oidc` によって返されるなどである。"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:82
+#, fuzzy
 msgid "So if `Basic` and `Authorization Code` mechanisms are combined then `401` will be returned if no credentials are provided and if `JWT` and `Authorization Code` mechanisms are combined then a redirect URL will be returned."
-msgstr ""
+msgstr "したがって、 `Basic` と `Authorization Code` の仕組みが組み合わされた場合、認証情報が提供されなければ `401` が返され、 `JWT` と `Authorization Code` の仕組みが組み合わされた場合、リダイレクト URL が返されることになります。"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:84
+#, fuzzy
 msgid "In some cases such a default logic of selecting the challenge is exactly what is required by a given application but sometimes it may not meet the requirements. In such cases (or indeed in other similar cases where you'd like to change the order in which the mechanisms are asked to handle the current authentication or challenge request), you can create a custom mechanism and choose which mechanism should create a challenge, for example:"
-msgstr ""
+msgstr "このようなデフォルトのチャレンジ選択ロジックが、あるアプリケーションでまさに必要とされる場合もありますが、時には要件を満たさない場合もあります。そのような場合（あるいは、メカニズムが現在の認証またはチャレンジ要求を処理するように求められる順序を変更したい他の同様の場合）、カスタムメカニズムを作成し、例えばどのメカニズムがチャレンジを作成すべきかを選択することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:89
@@ -547,7 +552,6 @@ msgstr "認可の無効化"
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:285
 #, fuzzy
-#| msgid "If you have a good reason to disable the authorization (for example, when testing) then you can register a custom `AuthorizationController`:"
 msgid "If you have a good reason to disable the authorization then you can register a custom `AuthorizationController`:"
 msgstr "認可を無効にする正当な理由がある場合(テスト時など)は、カスタムの `AuthorizationController` を登録してください。"
 
@@ -576,8 +580,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:303
+#, fuzzy
 msgid "For manual testing Quarkus provides a convenient config property to disable authorization in dev mode. This property has the exact same effect as the custom `AuthorizationController` shown above, but is only available in dev mode:"
-msgstr ""
+msgstr "手動テストのために、Quarkusは、開発モードで認証を無効にする便利な設定プロパティを提供します。このプロパティは、上記のカスタム `AuthorizationController` とまったく同じ効果を持ちますが、開発モードでのみ利用可能です。"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:307
