--- a/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
@@ -419,13 +419,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:207
+#, fuzzy
 msgid "where `keycloak.version` should be set to `17.0.0` or higher."
-msgstr ""
+msgstr "ここで、 `keycloak.version` は、 `17.0.0` 以降に設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:209
 #, fuzzy
-#| msgid "You should be able to access your Keycloak Server at http://localhost:8180/auth[localhost:8180/auth] or https://localhost:8543/auth[localhost:8543/auth]."
 msgid "You should be able to access your Keycloak Server at https://localhost:8543[localhost:8543]."
 msgstr "Keycloakサーバーには、 link:http://localhost:8180/auth[localhost:8180/auth] または link:https://localhost:8543/auth[localhost:8543/auth] でアクセスできるはずです。"
 
