--- a/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
@@ -494,13 +494,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:262
+#, fuzzy
 msgid "where `keycloak.version` should be set to `17.0.0` or higher."
-msgstr ""
+msgstr "ここで、 `keycloak.version` は、 `17.0.0` 以降に設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:264
 #, fuzzy
-#| msgid "You should be able to access your Keycloak Server at http://localhost:8180/auth[localhost:8180/auth]."
 msgid "You should be able to access your Keycloak Server at http://localhost:8180[localhost:8180]."
 msgstr "Keycloakサーバーには、 link:http://localhost:8180/auth[localhost:8180/auth] でアクセスできるはずです。"
 
@@ -680,24 +680,26 @@ msgstr "どちらの場合も、ユーザーの認証に成功すると、ラン
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:342
 #, fuzzy, no-wrap
-#| msgid "Disabling Tenant Configurations"
 msgid "Resolving Tenant Identifiers with Annotations"
 msgstr "テナント設定を無効にする"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:347
+#, fuzzy
 msgid "You can use the annotations and CDI interceptors for resolving the tenant identifiers as an alternative to using `quarkus.oidc.TenantResolver`. This can be done by setting the value for the key `OidcUtils.TENANT_ID_ATTRIBUTE` on the current `RoutingContext`."
-msgstr ""
+msgstr "`quarkus.oidc.TenantResolver` を使用する代わりに、テナント識別子の解決にアノテーションとCDIインターセプターを使用することができます。これは、現在の `RoutingContext` のキー `OidcUtils.TENANT_ID_ATTRIBUTE` に値を設定することで可能です。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:350
+#, fuzzy
 msgid "Assuming your application supports two OIDC tenants (`hr`, and default) first you need to define one annotation per tenant ID other than default:"
-msgstr ""
+msgstr "アプリケーションが2つのOIDCテナント（ `hr` 、およびデフォルト）をサポートすると仮定すると、まず、デフォルト以外のテナントIDごとに1つのアノテーションを定義する必要があります。"
 
 #. type: delimited block =
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:355
+#, fuzzy
 msgid "Proactive HTTP authentication needs to be disabled (`quarkus.http.auth.proactive=false`) for this to work. See xref:security-built-in-authentication.adoc#proactive-authentication[Proactive Authentication] section for further details."
-msgstr ""
+msgstr "この機能を使用するには、Proactive HTTP 認証を無効にする必要があります ( `quarkus.http.auth.proactive=false`)。詳しくは link:security-built-in-authentication.html#proactive-authentication[Proactive Authenticationの]項をご覧ください。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:365
@@ -713,8 +715,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:368
+#, fuzzy
 msgid "Next, you'll need one interceptor for each of those annotations:"
-msgstr ""
+msgstr "次に、それらのアノテーションに対応するインターセプターを1つずつ用意します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:376
@@ -741,8 +744,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:388
+#, fuzzy
 msgid "Now all methods and classes carrying `@HrTenant` will be authenticated using the OIDC provider configured by `quarkus.oidc.hr.auth-server-url`, while all other classes and methods will still be authenticated using the default OIDC provider."
-msgstr ""
+msgstr "これで、 `@HrTenant` を持つすべてのメソッドとクラスは、 `quarkus.oidc.hr.auth-server-url` で設定された OIDC プロバイダを使用して認証され、他のすべてのクラスとメソッドは、デフォルトの OIDC プロバイダを使用して認証されるようになります。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:389
