--- a/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
@@ -146,8 +146,9 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:63
+#, fuzzy
 msgid "This command generates a Maven project, importing the `oidc` extension which is an implementation of OIDC for Quarkus."
-msgstr ""
+msgstr "このコマンドは、Quarkus用のOIDCの実装である `oidc` 拡張をインポートして、Mavenプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:66
@@ -411,13 +412,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:192
+#, fuzzy
 msgid "where `keycloak.version` should be set to `17.0.0` or higher."
-msgstr ""
+msgstr "ここで、 `keycloak.version` は、 `17.0.0` 以降に設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:194
 #, fuzzy
-#| msgid "You should be able to access your Keycloak Server at http://localhost:8180/auth[localhost:8180/auth]."
 msgid "You should be able to access your Keycloak Server at http://localhost:8180[localhost:8180]."
 msgstr "Keycloakサーバーには、 link:http://localhost:8180/auth[localhost:8180/auth] でアクセスできるはずです。"
 
@@ -434,7 +435,6 @@ msgstr "新しいレルムを作成するには、{quickstarts-tree-url}/securit
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:201
 #, fuzzy
-#| msgid "If you want to use the Keycloak Admin Client to configure your server from your application you need to include the `quarkus-keycloak-admin-client` extension."
 msgid "If you want to use the Keycloak Admin Client to configure your server from your application you need to include the either `quarkus-keycloak-admin-client` or the `quarkus-keycloak-admin-client-reactive` (if the application uses `quarkus-rest-client-reactive`) extension."
 msgstr "Keycloak Admin Clientを使用して、アプリケーションからサーバーを設定したい場合は、 `quarkus-keycloak-admin-client` エクステンションを含める必要があります。"
 
