--- a/l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po
@@ -883,8 +883,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/smallrye-fault-tolerance.adoc:536
+#, fuzzy
 msgid "The link:https://smallrye.io/docs/smallrye-fault-tolerance/5.3.1/usage/programmatic-api.html[programmatic API] is present, including Mutiny support, and integrated with the declarative, annotation-based API.  You can use the `FaultTolerance` and `MutinyFaultTolerance` APIs out of the box."
-msgstr ""
+msgstr "Mutinyのサポートを含む link:https://smallrye.io/docs/smallrye-fault-tolerance/5.3.1/usage/programmatic-api.html[プログラム的なAPIが]存在し、宣言的でアノテーションベースのAPIと統合されています。 `FaultTolerance` と `MutinyFaultTolerance` の API をすぐに使うことができます。"
 
 #~ msgid "To complete this guide, you need:"
 #~ msgstr "このガイドを完成させるには、以下が必要です:"
