--- a/l10n/po/ja_JP/_guides/transaction.adoc.po
+++ b/l10n/po/ja_JP/_guides/transaction.adoc.po
@@ -83,8 +83,9 @@ msgstr "トランザクションの開始と停止:境界線の定義"
 
 #. type: Plain text
 #: upstream/_guides/transaction.adoc:42
+#, fuzzy
 msgid "You can define your transaction boundaries either declarativly with `@Transactional` or programmatically with `QuarkusTransaction`. You can also use the JTA `UserTransaction` API directly, however this is less user friendly than `QuarkusTransaction`."
-msgstr ""
+msgstr "トランザクションの境界は、 `@Transactional` で宣言的に、または `QuarkusTransaction` でプログラム的に定義できます。 JTA `UserTransaction` API を直接使用することもできますが、これは `QuarkusTransaction` よりも使い勝手が悪くなります。"
 
 #. type: Title ===
 #: upstream/_guides/transaction.adoc:43
@@ -319,14 +320,15 @@ msgstr "トランザクションコンテキストをリアクティブパイプ
 
 #. type: Title ===
 #: upstream/_guides/transaction.adoc:153
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Programmatic Approach"
-msgstr ""
+msgstr "プログラム・アプローチ"
 
 #. type: Plain text
 #: upstream/_guides/transaction.adoc:158
+#, fuzzy
 msgid "You can use static methods on `QuarkusTransaction` to define transaction boundaries. This provides two different options, a functional approach that allows you to run a lambda within the scope of a transaction, or by using explicit `begin`, `commit` and `rollback` methods."
-msgstr ""
+msgstr "`QuarkusTransaction` 上の静的メソッドを使用して、トランザクションの境界を定義することができます。これは、トランザクションの範囲内でラムダを実行できる関数的なアプローチと、明示的な `begin`, `commit`, `rollback` のメソッドを使用することによる2つの異なるオプションを提供します。"
 
 #. type: delimited block -
 #: upstream/_guides/transaction.adoc:163
@@ -395,67 +397,73 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/transaction.adoc:204
+#, fuzzy
 msgid "The above example shows a few different ways the API can be used. The first method simply calls begin, does some work and commits it.  This created transaction is tied to the CDI request scope, so if it is still active when the request scope is destroyed then it will be automatically rolled back. This removes the need to explicitly catch exceptions and call `rollback`, and acts as a safety net against inadvertent transaction leaks, however it does mean that this can only be used when the request scope is active. The second example in the method calls begin with a timeout option, and then rolls back the transaction."
-msgstr ""
+msgstr "上記の例では、APIをいくつかの異なる方法で使用することができます。最初の方法は、単純に begin を呼び出し、何らかの作業を行い、それをコミットするものです。この作成されたトランザクションはCDIリクエストスコープに関連付けられ、リクエストスコープが破壊されたときにまだアクティブであれば、それは自動的にロールバックされます。これにより、明示的に例外をキャッチしたり `rollback` を呼び出したりする必要がなくなり、 不用意なトランザクションリークに対するセーフティネットとして機能します。 しかし、これはリクエストスコープがアクティブであるときにしか使えないということになります。メソッド呼び出しの2番目の例は、タイムアウトオプションで開始し、トランザクションをロールバックする。"
 
 #. type: Plain text
 #: upstream/_guides/transaction.adoc:208
+#, fuzzy
 msgid "The second example shows the use of lambda scoped transactions, the first just runs a `Runnable` within a transaction, the second, runs `Callable` with some specific options. In particular the `exceptionHandler` method can be used to control if the transaction is rolled back or not on exception, and the `semantic` method controls the behaviour if an existing transaction is already started."
-msgstr ""
+msgstr "2つ目の例は、ラムダスコープのトランザクションを使用しています。1つ目は単にトランザクション内で `Runnable` 、2つ目はいくつかの特定のオプションをつけて `Callable` 。特に、 `exceptionHandler` メソッドは、例外発生時にトランザクションをロールバックするかどうかを制御するために使用され、 `semantic` メソッドは、既存のトランザクションが既に開始されている場合の動作を制御するために使用されます。"
 
 #. type: Plain text
 #: upstream/_guides/transaction.adoc:210
+#, fuzzy
 msgid "The following semantics are supported:"
-msgstr ""
+msgstr "以下のセマンティクスをサポートする。"
 
 #. type: Labeled list
 #: upstream/_guides/transaction.adoc:212
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "DISALLOW_EXISTING"
-msgstr ""
+msgstr "disallow_existing"
 
 #. type: Plain text
 #: upstream/_guides/transaction.adoc:216
+#, fuzzy
 msgid "If a transaction is already associated with the current thread a `QuarkusTransactionException` will be thrown, otherwise a new transaction is started, and follows all the normal lifecycle rules."
-msgstr ""
+msgstr "もしトランザクションがすでに現在のスレッドに関連していれば、 `QuarkusTransactionException` が投げられます。そうでなければ、新しいトランザクションが開始され、すべての通常のライフサイクルのルールに従います。"
 
 #. type: Labeled list
 #: upstream/_guides/transaction.adoc:217
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "JOIN_EXISTING"
-msgstr ""
+msgstr "JOIN_EXISTING"
 
 #. type: Plain text
 #: upstream/_guides/transaction.adoc:226
+#, fuzzy
 msgid "If no transaction is active then a new transaction will be started, and committed when the method ends.  If an exception is thrown the exception handler registered by `#exceptionHandler(Function)` will be called to decide if the TX should be committed or rolled back.  If an existing transaction is active then the method is run in the context of the existing transaction. If an exception is thrown the exception handler will be called, however a result of `ExceptionResult#ROLLBACK` will result in the TX marked as rollback only, while a result of `ExceptionResult#COMMIT` will result in no action being taken."
-msgstr ""
+msgstr "トランザクションがアクティブでない場合、新しいトランザクションが開始され、メソッドの終了時にコミットされます。例外が発生した場合、 `#exceptionHandler(Function)` によって登録された例外ハンドラが呼び出され、TX をコミットするかロールバックするかを決定します。既存のトランザクションがアクティブである場合、メソッドは既存のトランザクションのコンテキストで実行される。例外が発生した場合、例外ハンドラが呼び出されるが、 `ExceptionResult#ROLLBACK` の結果は、TX がロールバックのみとマークされ、一方 `ExceptionResult#COMMIT` の結果は、何も行われないという結果になる。"
 
 #. type: Labeled list
 #: upstream/_guides/transaction.adoc:227
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "REQUIRE_NEW"
-msgstr ""
+msgstr "REQUIRE_NEW"
 
 #. type: Plain text
 #: upstream/_guides/transaction.adoc:234
+#, fuzzy
 msgid "This is the default semantic.  If an existing transaction is already associated with the current thread then the transaction is suspended, and resumed once the current transaction is complete.  A new transaction is started after the existing transaction is suspended, and follows all the normal lifecycle rules."
-msgstr ""
+msgstr "これはデフォルトのセマンティックである。もし既存のトランザクションがすでに現在のスレッドと関連している場合、そのトランザクションは中断され、現在のトランザクションが完了すると再開されます。新しいトランザクションは、既存のトランザクションが中断された後に開始され、すべての通常のライフサイクルルールに従います。"
 
 #. type: Labeled list
 #: upstream/_guides/transaction.adoc:235
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "SUSPEND_EXISTING"
-msgstr ""
+msgstr "suspend_existing"
 
 #. type: Plain text
 #: upstream/_guides/transaction.adoc:242
+#, fuzzy
 msgid "If no transaction is active then this semantic is basically a no-op.  If a transaction is active then it is suspended, and resumed after the task is run.  The exception handler will never be consulted when this semantic is in use, specifying both an exception handler and this semantic is considered an error.  This semantic allows for code to easily be run outside the scope of a transaction."
-msgstr ""
+msgstr "トランザクションがアクティブでない場合、このセマンティックは基本的にノー・オペレーションです。もしトランザクションがアクティブであれば、それは中断され、タスクの実行後に再開されます。このセマンティックが使用されている場合、例外ハンドラは決して参照されず、例外ハンドラとこのセマンティックの両方を指定することはエラーとみなされます。このセマンティックは、トランザクションの範囲外でコードを簡単に実行することを可能にします。"
 
 #. type: Title ===
 #: upstream/_guides/transaction.adoc:245
 #, fuzzy, no-wrap
-#| msgid "API approach"
 msgid "Legacy API approach"
 msgstr "APIアプローチ"
 
