--- a/l10n/po/ja_JP/_guides/elasticsearch-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/elasticsearch-dev-services.adoc.po
@@ -21,81 +21,93 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/elasticsearch-dev-services.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Dev Services for Elasticsearch"
-msgstr ""
+msgstr "Elasticsearchのための開発サービス"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:14
+#, fuzzy
 msgid "If any Elasticsearch-related extension is present (e.g. `quarkus-elasticsearch-rest-client` or `quarkus-hibernate-search-orm-elasticsearch`), Dev Services for Elasticsearch automatically starts an Elasticsearch server in dev mode and when running tests.  So, you don't have to start a server manually.  The application is configured automatically."
-msgstr ""
+msgstr "Elasticsearch関連の拡張機能がある場合（例： `quarkus-elasticsearch-rest-client` や `quarkus-hibernate-search-orm-elasticsearch` ）、Dev Services for Elasticsearchは開発モードやテスト実行時に自動的にElasticsearchサーバを起動します。そのため、手動でサーバを起動する必要はありません。アプリケーションは自動的に設定されます。"
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch-dev-services.adoc:15
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Enabling / Disabling Dev Services for Elasticsearch"
-msgstr ""
+msgstr "ElasticsearchのDevサービスの有効化／無効化"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:18
+#, fuzzy
 msgid "Dev Services for Elasticsearch is automatically enabled unless:"
-msgstr ""
+msgstr "Dev Services for Elasticsearchは、以下の場合を除き、自動的に有効化されます。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:20
+#, fuzzy
 msgid "`quarkus.devservices.enabled` is set to `false`."
-msgstr ""
+msgstr "`quarkus.devservices.enabled` は、 に設定されます。 `false`"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:21
+#, fuzzy
 msgid "`quarkus.elasticsearch.devservices.enabled` is set to `false`"
-msgstr ""
+msgstr "`quarkus.elasticsearch.devservices.enabled` が設定されます。 `false`"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:22
+#, fuzzy
 msgid "the hosts property is configured, depending of the extension used it can be:"
-msgstr ""
+msgstr "は、使用する拡張子によって設定されます。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:23
+#, fuzzy
 msgid "`quarkus.elasticsearch.hosts`"
-msgstr ""
+msgstr "`quarkus.elasticsearch.hosts`"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:24
+#, fuzzy
 msgid "`quarkus.hibernate-search-orm.elasticsearch.hosts`"
-msgstr ""
+msgstr "`quarkus.hibernate-search-orm.elasticsearch.hosts`"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:27
+#, fuzzy
 msgid "Dev Services for Elasticsearch relies on Docker to start the server.  If your environment does not support Docker, you will need to start the server manually, or connect to an already running server."
-msgstr ""
+msgstr "Dev Services for Elasticsearchは、サーバーの起動にDockerを利用しています。Dockerに対応していない環境では、手動でサーバを起動するか、既に起動しているサーバに接続する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch-dev-services.adoc:28
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Shared Elasticsearch"
-msgstr ""
+msgstr "Elasticsearchの共有化"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:32
+#, fuzzy
 msgid "Sometimes you need to share the server between applications.  Dev Services for Elasticsearch implements a _service discovery_ mechanism for your multiple Quarkus applications running in _dev_ mode to share a single server."
-msgstr ""
+msgstr "アプリケーション間でサーバーを共有する必要がある場合があります。Dev Services for Elasticsearchは、 _開発_モードで実行されている複数のQuarkusアプリケーションが1つのサーバーを共有できるように、 _サービス検出_メカニズムを実装しています。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:34
+#, fuzzy
 msgid "Dev Services for Elasticsearch starts the container with the `quarkus-dev-service-elasticsearch` label which is used to identify the container."
-msgstr ""
+msgstr "Dev Services for Elasticsearch は、コンテナの識別に使用される `quarkus-dev-service-elasticsearch` ラベルでコンテナを起動します。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:38
+#, fuzzy
 msgid "If you need multiple (shared) servers, you can configure the `quarkus.elasticsearch.devservices.service-name` attribute and indicate the server name.  It looks for a container with the same value, or starts a new one if none can be found.  The default service name is `elasticsearch`."
-msgstr ""
+msgstr "複数の（共有）サーバーが必要な場合は、 `quarkus.elasticsearch.devservices.service-name` 属性を設定し、サーバー名を指定することができます。同じ値を持つコンテナを探すか、見つからない場合は新規に起動します。デフォルトのサービス名は `elasticsearch` です。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:41
+#, fuzzy
 msgid "Sharing is enabled by default in dev mode, but disabled in test mode.  You can disable the sharing with `quarkus.elasticsearch.devservices.shared=false`."
-msgstr ""
+msgstr "共有は、devモードではデフォルトで有効ですが、testモードでは無効です。共有は `quarkus.elasticsearch.devservices.shared=false` で無効にすることができます。"
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch-dev-services.adoc:42
@@ -105,13 +117,15 @@ msgstr "ポートの設定"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:46
+#, fuzzy
 msgid "By default, Dev Services for Elasticsearch picks a random port and configures the application.  You can set the port by configuring the `quarkus.elasticsearch.devservices.port` property."
-msgstr ""
+msgstr "デフォルトでは、Dev Services for Elasticsearchはランダムなポートを選び、アプリケーションを設定します。 `quarkus.elasticsearch.devservices.port` プロパティを設定することで、ポートを設定することができます。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:48
+#, fuzzy
 msgid "Note that the Elasticsearch hosts property is automatically configured with the chosen port."
-msgstr ""
+msgstr "Elasticsearchのhostsプロパティは、選択したポートで自動的に構成されることに注意してください。"
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch-dev-services.adoc:49
@@ -121,13 +135,15 @@ msgstr "イメージの設定"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:52
+#, fuzzy
 msgid "Dev Services for Elasticsearch only support Elasticsearch based images, Opensearch is not supported at the moment."
-msgstr ""
+msgstr "Dev Services for Elasticsearchは、Elasticsearchベースのイメージのみをサポートし、Opensearchは現時点ではサポートされていません。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:54
+#, fuzzy
 msgid "If you need to use a different image than the default one you can configure it via"
-msgstr ""
+msgstr "デフォルトの画像と異なる画像を使用する必要がある場合、以下の方法で設定できます。"
 
 #. type: delimited block -
 #: upstream/_guides/elasticsearch-dev-services.adoc:57
@@ -137,17 +153,18 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch-dev-services.adoc:59
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Current limitations"
-msgstr ""
+msgstr "現在の制限"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:62
+#, fuzzy
 msgid "Currently, only the default backend for Hibernate Search Elasticsearch is supported, because Dev Services for Elasticsearch can only start one Elasticsearch container."
-msgstr ""
+msgstr "現在、Dev Services for Elasticsearchは1つのElasticsearchコンテナしか起動できないため、Hibernate Search Elasticsearchのデフォルトバックエンドのみがサポートされています。"
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch-dev-services.adoc:63
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Configuration reference"
-msgstr ""
+msgstr "コンフィギュレーションリファレンス"
