--- a/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
@@ -793,14 +793,14 @@ msgstr ""
 #. type: Title ==
 #: upstream/_guides/gradle-tooling.adoc:504
 #, fuzzy, no-wrap
-#| msgid "Running native tests"
 msgid "Running integration tests"
 msgstr "ネイティブテストの実行"
 
 #. type: delimited block =
 #: upstream/_guides/gradle-tooling.adoc:508
+#, fuzzy
 msgid "Quarkus integration tests (annotated with `@QuarkusIntegrationTest`) will run on the artifact produced by Quarkus.  Those tests can be placed in a `src/integrationTest/java` directory and executed using:"
-msgstr ""
+msgstr "Quarkus統合テスト（ `@QuarkusIntegrationTest` でアノテーション）は、Quarkusが生成したアーティファクトで実行されます。これらのテストは、 `src/integrationTest/java` ディレクトリに配置し、それを使用して実行することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/gradle-tooling.adoc:512
@@ -811,7 +811,6 @@ msgstr "./gradlew build\n"
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:515
 #, fuzzy
-#| msgid "This task depends on `quarkusBuild`, so it will generate the native image before running the tests."
 msgid "This task depends on both `check` and `quarkusBuild` tasks. The final artifact will be produced before running tests."
 msgstr "このタスクは `quarkusBuild`  に依存しているので、テストを実行する前にネイティブイメージを生成します。"
 
