--- a/l10n/po/ja_JP/_guides/resteasy-reactive-migration.adoc.po
+++ b/l10n/po/ja_JP/_guides/resteasy-reactive-migration.adoc.po
@@ -21,50 +21,54 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/resteasy-reactive-migration.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Migrating to RESTEasy Reactive"
-msgstr ""
+msgstr "RESTEasy Reactiveへの移行について"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:10
+#, fuzzy
 msgid "Migrating from RESTEasy Classic to RESTEasy Reactive is straightforward in most cases, however there are a few cases that require some attention.  This document provides a list of issues users attempting the migration should be aware of."
-msgstr ""
+msgstr "RESTEasy ClassicからRESTEasy Reactiveへの移行は、ほとんどの場合簡単ですが、いくつかの注意が必要なケースがあります。この文書では、移行を試みるユーザが注意すべき問題のリストを提供します。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:12
+#, fuzzy
 msgid "The reference documentation of RESTEasy Reactive can be found xref:resteasy-reactive.adoc[here]."
-msgstr ""
+msgstr "RESTEasy Reactiveのリファレンスドキュメントは link:resteasy-reactive.html[こちらで]ご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_guides/resteasy-reactive-migration.adoc:13
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Server"
-msgstr ""
+msgstr "サーバー"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:17
+#, fuzzy
 msgid "The server part of RESTEasy Reactive (`quarkus-resteasy-reactive` and its dependencies) provide an implementation of the JAX-RS specification, but leverage Quarkus' build time processing and the unified I/O model provided by Vert.x."
-msgstr ""
+msgstr "RESTEasy Reactiveのサーバー部分（ `quarkus-resteasy-reactive` とその依存関係）は、JAX-RS仕様の実装を提供しますが、Quarkusの構築時処理とVert.xが提供する統一I/Oモデルを活用しています。"
 
 #. type: Title ===
 #: upstream/_guides/resteasy-reactive-migration.adoc:18
 #: upstream/_guides/resteasy-reactive-migration.adoc:112
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Dependencies"
-msgstr ""
+msgstr "依存関係"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:21
+#, fuzzy
 msgid "The following table matches the legacy RESTEasy dependencies with the new RESTEasy Reactive ones."
-msgstr ""
+msgstr "次の表は、従来のRESTEasyの依存関係と新しいRESTEasy Reactiveの依存関係を一致させたものです。"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:23
 #: upstream/_guides/resteasy-reactive-migration.adoc:51
 #: upstream/_guides/resteasy-reactive-migration.adoc:117
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Legacy"
-msgstr ""
+msgstr "レガシー"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:25
@@ -76,68 +80,69 @@ msgstr "RESTEasy Reactive"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:26
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-resteasy`"
-msgstr ""
+msgstr "`quarkus-resteasy`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:28
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-resteasy-reactive`"
-msgstr ""
+msgstr "`quarkus-resteasy-reactive`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:29
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-resteasy-jackson`"
-msgstr ""
+msgstr "`quarkus-resteasy-jackson`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:31
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-resteasy-reactive-jackson`"
-msgstr ""
+msgstr "`quarkus-resteasy-reactive-jackson`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:32
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-resteasy-jsonb`"
-msgstr ""
+msgstr "`quarkus-resteasy-jsonb`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:34
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-resteasy-reactive-jsonb`"
-msgstr ""
+msgstr "`quarkus-resteasy-reactive-jsonb`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:35
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-resteasy-jaxb`"
-msgstr ""
+msgstr "`quarkus-resteasy-jaxb`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:37
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-resteasy-reactive-jaxb`"
-msgstr ""
+msgstr "`quarkus-resteasy-reactive-jaxb`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:38
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-resteasy-qute`"
-msgstr ""
+msgstr "`quarkus-resteasy-qute`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:40
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-resteasy-reactive-qute`"
-msgstr ""
+msgstr "`quarkus-resteasy-reactive-qute`"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:43
+#, fuzzy
 msgid "The `quarkus-resteasy-mutiny` does not have a corresponding dependency, as RESTEasy Reactive provides Mutiny integration out of the box."
-msgstr ""
+msgstr "`quarkus-resteasy-mutiny` は、RESTEasy Reactive が Mutiny の統合をすぐに提供するため、対応する依存関係がありません。"
 
 #. type: Title ===
 #: upstream/_guides/resteasy-reactive-migration.adoc:44
@@ -147,13 +152,15 @@ msgstr "アノテーション"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:47
+#, fuzzy
 msgid "RESTEasy Reactive does not support the various custom annotation under the `org.jboss.resteasy.annotations` package."
-msgstr ""
+msgstr "RESTEasy Reactiveは、 `org.jboss.resteasy.annotations` パッケージの各種カスタムアノテーションには対応していません。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:49
+#, fuzzy
 msgid "The following table matches the legacy RESTEasy annotations with the new RESTEasy Reactive ones."
-msgstr ""
+msgstr "次の表は、従来のRESTEasyアノテーションと新しいRESTEasy Reactiveアノテーションを対応させたものです。"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:53
@@ -163,258 +170,270 @@ msgstr "Comments"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:54
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.annotations.jaxrs.PathParam`"
-msgstr ""
+msgstr "`org.jboss.resteasy.annotations.jaxrs.PathParam`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:55
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.reactive.RestPath`"
-msgstr ""
+msgstr "`org.jboss.resteasy.reactive.RestPath`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:57
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "This annotation is not necessary when the path part matches the method parameter name"
-msgstr ""
+msgstr "パス部分がメソッドパラメータ名と一致する場合は、このアノテーションは必要ありません。"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:58
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.annotations.jaxrs.QueryParam`"
-msgstr ""
+msgstr "`org.jboss.resteasy.annotations.jaxrs.QueryParam`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:59
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.reactive.RestQuery`"
-msgstr ""
+msgstr "`org.jboss.resteasy.reactive.RestQuery`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:62
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.annotations.jaxrs.FormParam`"
-msgstr ""
+msgstr "`org.jboss.resteasy.annotations.jaxrs.FormParam`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:63
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.reactive.RestForm`"
-msgstr ""
+msgstr "`org.jboss.resteasy.reactive.RestForm`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:66
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.annotations.jaxrs.HeaderParam`"
-msgstr ""
+msgstr "`org.jboss.resteasy.annotations.jaxrs.HeaderParam`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:67
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.reactive.RestHeader`"
-msgstr ""
+msgstr "`org.jboss.resteasy.reactive.RestHeader`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:70
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.annotations.jaxrs.CookieParam`"
-msgstr ""
+msgstr "`org.jboss.resteasy.annotations.jaxrs.CookieParam`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:71
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.reactive.RestCookie`"
-msgstr ""
+msgstr "`org.jboss.resteasy.reactive.RestCookie`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:74
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.annotations.jaxrs.MatrixParam`"
-msgstr ""
+msgstr "`org.jboss.resteasy.annotations.jaxrs.MatrixParam`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:75
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.reactive.RestMatrix`"
-msgstr ""
+msgstr "`org.jboss.resteasy.reactive.RestMatrix`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:78
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.annotations.cache.Cache`"
-msgstr ""
+msgstr "`org.jboss.resteasy.annotations.cache.Cache`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:79
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.reactive.Cache`"
-msgstr ""
+msgstr "`org.jboss.resteasy.reactive.Cache`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:82
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.annotations.cache.NoCache`"
-msgstr ""
+msgstr "`org.jboss.resteasy.annotations.cache.NoCache`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:83
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.reactive.NoCache`"
-msgstr ""
+msgstr "`org.jboss.resteasy.reactive.NoCache`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:86
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.annotations.SseElementType`"
-msgstr ""
+msgstr "`org.jboss.resteasy.annotations.SseElementType`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:87
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`org.jboss.resteasy.reactive.RestStreamElementType`"
-msgstr ""
+msgstr "`org.jboss.resteasy.reactive.RestStreamElementType`"
 
 #. type: Title ===
 #: upstream/_guides/resteasy-reactive-migration.adoc:91
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "JAX-RS providers"
-msgstr ""
+msgstr "JAX-RSプロバイダ"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:94
+#, fuzzy
 msgid "Although RESTEasy Reactive provides the same spec compliant behavior as RESTEasy Classic does, it does not include the same exact provider implementations at runtime."
-msgstr ""
+msgstr "RESTEasy Reactiveは、RESTEasy Classicと同じ仕様に準拠した動作を提供しますが、実行時に同じ正確なプロバイダの実装が含まれているわけではありません。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:96
+#, fuzzy
 msgid "The most common case where the difference in providers might result in different behavior, is the included `javax.ws.rs.ext.ExceptionMapper` implementations. To see what classes are included in the application, launch the application in dev mode and navigate to http://localhost:8080/q/dev/io.quarkus.quarkus-resteasy-reactive/exception-mappers."
-msgstr ""
+msgstr "プロバイダの違いで動作が異なる可能性がある最も一般的なケースは、同梱の `javax.ws.rs.ext.ExceptionMapper` 実装です。アプリケーションにどのようなクラスが含まれているかを確認するには、開発モードでアプリケーションを起動し、 http://localhost:8080/q/dev/io.quarkus.quarkus-resteasy-reactive/exception-mappers"
 
 #. type: Title ===
 #: upstream/_guides/resteasy-reactive-migration.adoc:97
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Multipart support"
-msgstr ""
+msgstr "マルチパート対応"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:100
+#, fuzzy
 msgid "HTTP Multipart support in RESTEasy Reactive does **not** reuse the same types or annotations as RESTEasy Classic and thus users are encouraged to read <<resteasy-reactive#multipart,this>> part of the reference documentation."
-msgstr ""
+msgstr "RESTEasy ReactiveのHTTP Multipartサポートは、RESTEasy Classicと同じ型やアノテーションを再利用して *いない*ため、ユーザーはリファレンスドキュメントの link:resteasy-reactive.html#multipart[この]部分を読むことが推奨されます。"
 
 #. type: Title ===
 #: upstream/_guides/resteasy-reactive-migration.adoc:101
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Default media types"
-msgstr ""
+msgstr "デフォルトのメディアタイプ"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:106
+#, fuzzy
 msgid "Quarkus uses smart defaults when determining the media type of JAX-RS methods in order to simplify common use cases.  The difference between `quarkus-resteasy-reactive` and `quarkus-resteasy` is the use of `text/plain` as the default media type instead of `text/html` when the method returns a `String`."
-msgstr ""
+msgstr "Quarkusでは、一般的なユースケースを簡略化するために、JAX-RSメソッドのメディアタイプを決定する際にスマートデフォルトを使用しています。 `quarkus-resteasy-reactive` と `quarkus-resteasy` の違いは、メソッドが `String` を返す場合、 `text/html` の代わりに `text/plain` をデフォルトのメディアタイプとして使用することです。"
 
 #. type: Title ==
 #: upstream/_guides/resteasy-reactive-migration.adoc:107
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Client"
-msgstr ""
+msgstr "クライアント"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:111
+#, fuzzy
 msgid "The Reactive REST Client (`quarkus-rest-client-reactive` and its dependencies) replace the legacy `quarkus-rest-client` but leverage Quarkus' build time processing and the unified I/O model provided by Vert.x."
-msgstr ""
+msgstr "Reactive REST Client ( `quarkus-rest-client-reactive` とその依存関係) は、レガシー `quarkus-rest-client` を置き換えるものですが、Quarkus のビルド時処理と Vert.x が提供する統一 I/O モデルを活用します。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:115
+#, fuzzy
 msgid "The following table matches the legacy REST Client dependencies with the new Reactive REST Client ones."
-msgstr ""
+msgstr "次の表は、従来の REST Client の依存関係と、新しい Reactive REST Client の依存関係を一致させたものです。"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:120
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-rest-client`"
-msgstr ""
+msgstr "`quarkus-rest-client`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:122
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-rest-client-reactive`"
-msgstr ""
+msgstr "`quarkus-rest-client-reactive`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:123
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-rest-client-jackson`"
-msgstr ""
+msgstr "`quarkus-rest-client-jackson`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:125
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-rest-client-reactive-jackson`"
-msgstr ""
+msgstr "`quarkus-rest-client-reactive-jackson`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:126
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-rest-client-jsonb`"
-msgstr ""
+msgstr "`quarkus-rest-client-jsonb`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:128
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-rest-client-reactive-jsonb`"
-msgstr ""
+msgstr "`quarkus-rest-client-reactive-jsonb`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:129
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-rest-client-jaxb`"
-msgstr ""
+msgstr "`quarkus-rest-client-jaxb`"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:131
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`quarkus-rest-client-reactive-jaxb`"
-msgstr ""
+msgstr "`quarkus-rest-client-reactive-jaxb`"
 
 #. type: Title ===
 #: upstream/_guides/resteasy-reactive-migration.adoc:133
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Keycloak admin client"
-msgstr ""
+msgstr "Keycloak 管理者クライアント"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:137
+#, fuzzy
 msgid "When using `quarkus-rest-client`, users can use the `quarkus-keycloak-admin-client` to administer the target Keycloak instance by leveraging the rest client."
-msgstr ""
+msgstr "`quarkus-rest-client` を使用する場合、ユーザーは `quarkus-keycloak-admin-client` を使用して、レストクライアントを活用してターゲットのKeycloakインスタンスを管理することができます。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:140
+#, fuzzy
 msgid "When using `quarkus-rest-client-reactive` however, users must use `quarkus-keycloak-admin-client-reactive` to access the same functionality and use the reactive REST Client."
-msgstr ""
+msgstr "ただし、 `quarkus-rest-client-reactive` を使用する場合、ユーザーは同じ機能にアクセスするために `quarkus-keycloak-admin-client-reactive` を使用し、reactive REST Client を使用する必要があります。"
 
 #. type: Title ===
 #: upstream/_guides/resteasy-reactive-migration.adoc:141
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "OIDC"
-msgstr ""
+msgstr "オーアイディーシー"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:144
+#, fuzzy
 msgid "When using `quarkus-rest-client`, users can use the `quarkus-oidc-client-filter` extensions to acquire and refresh access tokens from OpenID Connect and OAuth 2.0 compliant Authorization Servers."
-msgstr ""
+msgstr "`quarkus-rest-client` を使用する場合、ユーザーは `quarkus-oidc-client-filter` 拡張機能を使用して、OpenID Connect および OAuth 2.0 準拠の Authorization Server からアクセストークンを取得し、更新することができます。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:146
+#, fuzzy
 msgid "When using `quarkus-rest-client-reactive` however, users must use `quarkus-oidc-client-filter-reactive` to access the same functionality."
-msgstr ""
+msgstr "ただし、 `quarkus-rest-client-reactive` を使用する場合、同じ機能を利用するためには、 `quarkus-oidc-client-filter-reactive` を使用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:148
+#, fuzzy
 msgid "Similarly, `quarkus-oidc-token-propagation` allows user of the legacy REST to propagate the current `Bearer` or `Authorization Code Flow` access tokens."
-msgstr ""
+msgstr "同様に、 `quarkus-oidc-token-propagation` は、レガシー REST のユーザーが現在の `Bearer` または `Authorization Code Flow` のアクセストークンを伝搬することを可能にします。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:150
+#, fuzzy
 msgid "When using `quarkus-rest-client-reactive` however, users must use `quarkus-oidc-token-propagation-reactive` to access the same functionality."
-msgstr ""
+msgstr "ただし、 `quarkus-rest-client-reactive` を使用する場合、同じ機能を利用するためには、 `quarkus-oidc-token-propagation-reactive` を使用する必要があります。"
