--- a/l10n/po/ja_JP/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc.po
@@ -81,13 +81,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:20
 msgid "And much more!"
-msgstr ""
+msgstr "他多数!"
 
 #. type: Title ==
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:21
 #, no-wrap
 msgid "Migration Guide"
-msgstr ""
+msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:24
@@ -98,7 +98,7 @@ msgstr ""
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:25
 #, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:27
@@ -134,7 +134,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:46
 msgid "For instance:"
-msgstr ""
+msgstr "例えば"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:48
@@ -231,7 +231,7 @@ msgstr ""
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:88
 #, no-wrap
 msgid "Contributors"
-msgstr ""
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:92
@@ -247,34 +247,34 @@ msgstr ""
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:95
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:98
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:100
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:102
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:103
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:104
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:104
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
